# action-items

./: .env.example  API_DOCUMENTATION.md  app.py  main.py  pyproject.toml  requirements.txt  run_tests.py  setup.sh
src/api/: main.py
src/api/routers/: action_items.py  meetings.py  tags.py  terms.py  transcription.py
src/core/: config.py  database.py  models.py
src/services/: meeting_minutes.py  pdf_extractor.py  tagging.py  transcription.py  vector_search.py
tests/: test_meeting_minutes.py  test_models.py  test_pdf_extractor.py  test_simple.py  test_tagging.py  test_vector_search.py
